UPSTREAM: mmc: sdhci: move initialisation of command error member

When a command is started, logically it has no error.  Initialise the
command's error member to zero whenever we start a command.

BUG=chromium:723759
TEST=Build and boot

Change-Id: Ic9a22ecc2337fad1683dd102fc26e81b72fd8bc3
Signed-off-by: Russell King <rmk+kernel@arm.linux.org.uk>
Signed-off-by: Adrian Hunter <adrian.hunter@intel.com>
[ Goes with "mmc: sdhci: fix command response CRC error handling" ]
Cc: stable@vger.kernel.org # v4.5+
Tested-by: Gregory CLEMENT <gregory.clement@free-electrons.com>
Signed-off-by: Ulf Hansson <ulf.hansson@linaro.org>
Signed-off-by: Douglas Anderson <dianders@chromium.org>
(cherry picked from commit 96776200898cf9c1965b9f8b9a128e94bb6dce18)
Reviewed-on: https://chromium-review.googlesource.com/508029
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>